fix: fix overflow on right side

--- a/client/main.css
+++ b/client/main.css
@@ -1,4 +1,5 @@
 body{
     background-color: #fafafa;
     font-family: neue-hass-unica, sans-serif;
+    overflow-x: hidden;
 }
